--- a/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/02-Thinking-with-numbers.mdx
+++ b/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/02-Thinking-with-numbers.mdx
@@ -1,7 +1,7 @@
 # Thinking with Numbers
 
 ## Lesson Objective
-In this lesson, you will learn how to approach programming problems. We will try to understand the thinking process that is involved in approaching programming problems by building an analogy with numbers and observations related to numbers.
+In this lesson, you will learn how to approach programming problems. We will try to understand the thinking process that is involved in approaching programming problems by building an analogy with numbers and observations related to numbers. This is a **self-paced** class.
 
 ## Why should we think with numbers?
 You must understand that computers are basically naive devices that process data and convert it into the required results. They use the instructions provided by the programmer to do so. Basically, in the future when you will be required to use your programming skills to solve coding problems, you will find that in order to think of the logic involved in the problems, you will be trying to uncover patterns in the examples provided. This is where numbers and number patterns come into play.
