--- a/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/02A-Thinking-with-numbers-part2.mdx
+++ b/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/02A-Thinking-with-numbers-part2.mdx
@@ -2,7 +2,7 @@
 
 ## Lesson Objective
 
-We already covered 3 different types of puzzles in the previous lesson of thinking with numbers. This lesson will be the continuation of the previous lecture and we will discuss some more puzzles in this lecture. So, this will also be a fun lesson like the previous one.
+We already covered 3 different types of puzzles in the previous lesson of thinking with numbers. This lesson will be the continuation of the previous lecture and we will discuss some more puzzles in this lecture. This is a **self-paced** class. So, this will also be a fun lesson like the previous one.
 
 **Numbers are crazy and did you hear them talk…?** :wink:
 
