--- a/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/03-Thinking-with-visuals.mdx
+++ b/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/03-Thinking-with-visuals.mdx
@@ -1,10 +1,10 @@
-# Thinking with visuals - Part 1
+# Thinking with visuals
 
   
 
 ## Lesson Objective
 
-Earlier, in the previous lesson you tried problems with numbers. In this lesson you will learn how to solve various visual and thinking questions with logical analysis and thinking. This topic deals with the graphical representation of a problem and solving them based on representation.
+Earlier, in the previous lesson you tried problems with numbers. In this lesson you will learn how to solve various visual and thinking questions with logical analysis and thinking. This topic deals with the graphical representation of a problem and solving them based on representation. This is a **self-paced** class. 
 
   
 
