--- a/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/03A-Thinking-with-visuals-part2.mdx
+++ b/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/03A-Thinking-with-visuals-part2.mdx
@@ -4,7 +4,7 @@
 
 ## Lesson Objective
 
-We have already covered 3 different types of puzzles in the previous lesson of thinking with visuals. This lesson will be the continuation of the previous lecture and we will discuss some more puzzles in this lecture.
+We have already covered 3 different types of puzzles in the previous lesson of thinking with visuals. This lesson will be the continuation of the previous lecture and we will discuss some more puzzles in this lecture. This is a **self-paced** class. 
 
   
 
