--- a/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/04-Efficient-problem-solving.mdx
+++ b/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/04-Efficient-problem-solving.mdx
@@ -2,7 +2,7 @@
 
 ## Lesson Objective
 
-In this lesson we will be dealing with a structured way of approaching programming questions and solving them efficiently. We will learn about the various methodologies and techniques used to get the right approach towards solving a question by simply discussing a problem of getting the shortest path in the puzzle.
+In this lesson we will be dealing with a structured way of approaching programming questions and solving them efficiently. We will learn about the various methodologies and techniques used to get the right approach towards solving a question by simply discussing a problem of getting the shortest path in the puzzle. This is a **self-paced** class. 
 
   
 
