--- a/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/05-Applications-of-problem-solving-TSI.mdx
+++ b/Semester-1/docs/Problem-solving-using-Programming/01-Solving-problems-&-Writing-Algorithms/05-Applications-of-problem-solving-TSI.mdx
@@ -5,7 +5,7 @@
 
 ## Lesson Objective
 
-Solving problems means making choices. This lesson is for Teacher Student interaction (TSI). It is a live class.
+Solving problems means making choices. This lesson is for Teacher Student interaction (TSI). It is a **live class**.
 
   
 
